--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,6 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlinVersion"
+
+    testImplementation "junit:junit:$junitVersion"
 }
