--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 group groupId
 version libVersion
+description = libDescription
 
 buildscript {
     repositories {
@@ -8,10 +9,13 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokkaVersion"
     }
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'org.jetbrains.dokka'
+apply plugin: 'maven'
 
 repositories {
     mavenCentral()
@@ -22,4 +26,35 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlinVersion"
 
     testImplementation "junit:junit:$junitVersion"
+}
+
+dokka {
+    moduleName = libDescription
+    outputFormat = 'javadoc'
+    outputDirectory = "$buildDir/javadoc"
+}
+
+task sourcesJar(type: Jar, dependsOn: project.classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task dokkaJar(type: Jar, dependsOn: project.dokka) {
+    classifier = 'javadoc'
+    from dokka
+}
+
+artifacts {
+    archives sourcesJar
+    archives dokkaJar
+}
+
+uploadArchives {
+    repositories.mavenDeployer {
+        pom.groupId = "$groupId"
+        pom.artifactId = "$artifactId"
+        pom.version = "$libVersion"
+
+        repository(url: "file://${buildDir}/release/$libVersion")
+    }
 }
