--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 groupId=it.czerwinski
 artifactId=kotlin-util
 libVersion=0.1-SNAPSHOT
+libDescription=Kotlin utility classes based on Scala
 
 kotlinVersion=1.2.31
+dokkaVersion=0.9.16
 junitVersion=4.12
