🔧 Enabled full test logging

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,22 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
 }
 
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+        showExceptions true
+        exceptionFormat "full"
+        showCauses true
+        showStackTraces true
+
+        afterSuite { desc, result ->
+            def output = "results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
+            def repeatLength = output.length()
+            println('\n' + ('=' * repeatLength) + '\n' + desc.name + '\n' + output + '\n' + ('=' * repeatLength))
+        }
+    }
+}
+
 dokka {
     moduleName = libDescription
     outputFormat = 'javadoc'
