--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 groupId=it.czerwinski
 artifactId=kotlin-util
-libVersion=0.2-SNAPSHOT
+libVersion=0.2
 libDescription=Kotlin utility classes based on Scala
 
 kotlinVersion=1.2.40
