--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 groupId=it.czerwinski
 artifactId=kotlin-util
-libVersion=0.3-SNAPSHOT
+libVersion=1.0
 libDescription=Kotlin utility classes based on Scala
 
 kotlinVersion=1.2.41
