--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
 apply plugin: 'kotlin'
 apply plugin: 'org.jetbrains.dokka'
 apply plugin: 'maven'
+apply plugin: 'signing'
 
 repositories {
     mavenCentral()
@@ -65,6 +66,10 @@ artifacts {
     archives dokkaJar
 }
 
+signing {
+    sign configurations.archives
+}
+
 uploadArchives {
     repositories.mavenDeployer {
         pom.groupId = "$groupId"
@@ -72,6 +77,8 @@ uploadArchives {
         pom.version = "$libVersion"
 
         pom.project {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
             name libName
             packaging 'jar'
             description libDescription
