🔧 Uploading artifacts to Maven Central

--- a/build.gradle
+++ b/build.gradle
@@ -109,7 +109,28 @@ uploadArchives {
             }
         }
 
-        if (hasProperty('ossrhUsername')) {
+        if (System.getenv('SONATYPE_USERNAME') != null) {
+
+            println("Uploading to Sonatype")
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(
+                        userName: System.getenv('SONATYPE_USERNAME'),
+                        password: System.getenv('SONATYPE_PASSWORD')
+                )
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(
+                        userName: System.getenv('SONATYPE_USERNAME'),
+                        password: System.getenv('SONATYPE_PASSWORD')
+                )
+            }
+
+        } else if (hasProperty('ossrhUsername')) {
+
+            println("Uploading to Sonatype")
+
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
                 authentication(userName: ossrhUsername, password: ossrhPassword)
             }
@@ -117,8 +138,13 @@ uploadArchives {
             snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
                 authentication(userName: ossrhUsername, password: ossrhPassword)
             }
+
         } else {
+
+            println("Uploading to local repository")
+
             repository(url: "file://${buildDir}/release/$libVersion")
+
         }
     }
 }
