--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 groupId=it.czerwinski
 artifactId=kotlin-util
-libVersion=1.1-SNAPSHOT
+libVersion=1.1
 libName=Kotlin utilities
 libDescription=Kotlin utility classes based on Scala
 libUrl=http://czerwinski.it/projects/kotlin-util/
