--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,11 @@ test {
         showStackTraces true
 
         afterSuite { desc, result ->
-            def output = "results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
+            def output = "${result.resultType} (" +
+                    "${result.testCount} tests, " +
+                    "${result.successfulTestCount} passed, " +
+                    "${result.failedTestCount} failed, " +
+                    "${result.skippedTestCount} skipped)"
             def repeatLength = output.length()
             println('\n' + ('=' * repeatLength) + '\n' + desc.name + '\n' + output + '\n' + ('=' * repeatLength))
         }
@@ -52,12 +56,12 @@ dokka {
 }
 
 task sourcesJar(type: Jar, dependsOn: project.classes) {
-    classifier = 'sources'
+    archiveClassifier.set('sources')
     from sourceSets.main.allSource
 }
 
 task dokkaJar(type: Jar, dependsOn: project.dokka) {
-    classifier = 'javadoc'
+    archiveClassifier.set('javadoc')
     from dokka
 }
 
@@ -111,7 +115,7 @@ uploadArchives {
 
         if (System.getenv('SONATYPE_USERNAME') != null) {
 
-            println("Uploading to Sonatype")
+            println("Upload archives destination: Sonatype")
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
                 authentication(
@@ -129,7 +133,7 @@ uploadArchives {
 
         } else if (project.hasProperty('ossrhUsername')) {
 
-            println("Uploading to Sonatype")
+            println("Upload archives destination: Sonatype")
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
                 authentication(userName: ossrhUsername, password: ossrhPassword)
@@ -141,7 +145,7 @@ uploadArchives {
 
         } else {
 
-            println("Uploading to local repository")
+            println("Upload archives destination: local directory")
 
             repository(url: "file://${buildDir}/release/$libVersion")
 
