--- a/build.gradle
+++ b/build.gradle
@@ -99,8 +99,8 @@ uploadArchives {
 
             licenses {
                 license {
-                    name 'BSD 3-Clause License'
-                    url 'https://opensource.org/licenses/BSD-3-Clause'
+                    name 'The Apache Software License, Version 2.0'
+                    url 'http://www.apache.org/licenses/LICENSE-2.0'
                 }
             }
 
