--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ artifactId=kotlin-util
 libVersion=1.2-SNAPSHOT
 libName=Kotlin utilities
 libDescription=Kotlin utility classes based on Scala
-libUrl=http://czerwinski.it/projects/kotlin-util/
+libUrl=https://czerwinski.it/projects/kotlin-util/
 
 kotlinVersion=1.3.21
 dokkaVersion=0.9.17
