--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 
     testImplementation "junit:junit:$junitVersion"
+    testImplementation "org.mockito:mockito-core:3.0.0"
 }
 
 test {
@@ -50,10 +51,12 @@ test {
 }
 
 dokka {
-    moduleName = libName
     outputFormat = 'javadoc'
     outputDirectory = "$buildDir/javadoc"
-    includes = ['packages.md']
+    configuration {
+        moduleName = libName
+        includes = ['packages.md']
+    }
 }
 
 task sourcesJar(type: Jar, dependsOn: project.classes) {
