--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -23,11 +23,22 @@ jobs:
         with:
           java-version: 1.8
 
+      - name: Decrypt Key Ring File
+        env:
+          SIGNING_KEY_FILE_PASSPHRASE: ${{ secrets.signingKeyFilePassphrase }}
+        run: |
+          gpg --quiet --batch --yes --decrypt \
+            --passphrase="${SIGNING_KEY_FILE_PASSPHRASE}" \
+            --output secring.gpg secring.gpg.gpg
+
       - name: Publish To OSSRH Snapshot Repository
         env:
-          ORG_GRADLE_PROJECT_signingKeyId: ${{ secrets.signingKeyId }}
-          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.signingKey }}
-          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.signingPassword }}
+          SIGNING_KEY_ID: ${{ secrets.signingKeyId }}
+          SIGNING_PASS: ${{ secrets.signingPassword }}
           SONATYPE_USERNAME: ${{ secrets.ossrhUsername }}
           SONATYPE_PASSWORD: ${{ secrets.ossrhPassword }}
-        run: ./gradlew build publish
+        run: |
+          ./gradlew publish \
+            -Psigning.secretKeyRingFile=secring.gpg \
+            -Psigning.password="${SIGNING_PASS}" \
+            -Psigning.keyId="${SIGNING_KEY_ID}"
