--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,10 @@ jobs:
   build:
 
     name: Build Library
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
 
@@ -25,10 +28,10 @@ jobs:
         uses: gradle/wrapper-validation-action@v1
 
       - name: Run Checks
-        run: ./gradlew check
+        run: ./gradlew check --stacktrace
 
       - name: Generate Documentation
-        run: ./gradlew dokkaJavadoc dokkaJekyll
+        run: ./gradlew dokkaJavadoc dokkaJekyll --stacktrace
 
       - name: Build Library
-        run: ./gradlew build
+        run: ./gradlew build --stacktrace
