--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,10 @@ jobs:
   release:
 
     name: Upload To Maven Central
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
 
@@ -28,10 +31,7 @@ jobs:
       - name: Decrypt Key Ring File
         env:
           SIGNING_KEY_FILE_PASSPHRASE: ${{ secrets.signingKeyFilePassphrase }}
-        run: |
-          gpg --quiet --batch --yes --decrypt \
-            --passphrase="${SIGNING_KEY_FILE_PASSPHRASE}" \
-            --output secring.gpg secring.gpg.gpg
+        run: .github/scripts/decrypt_secring
 
       - name: Upload To Maven Central
         env:
@@ -39,8 +39,4 @@ jobs:
           SIGNING_PASS: ${{ secrets.signingPassword }}
           SONATYPE_USERNAME: ${{ secrets.ossrhUsername }}
           SONATYPE_PASSWORD: ${{ secrets.ossrhPassword }}
-        run: |
-          ./gradlew publish \
-            -Psigning.secretKeyRingFile=secring.gpg \
-            -Psigning.password="${SIGNING_PASS}" \
-            -Psigning.keyId="${SIGNING_KEY_ID}"
+        run: .github/scripts/publish_artifacts ${{ matrix.os }}
