Configure custom Dokka tasks

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         run: ./gradlew check --stacktrace
 
       - name: Generate Documentation
-        run: ./gradlew dokkaJavadoc dokkaJekyll --stacktrace
+        run: ./gradlew dokkaJavadocCommon dokkaJekyllCommon --stacktrace
 
       - name: Build Library
         run: ./gradlew build --stacktrace
