Implement NonFatal exception matcher

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 kotlin.code.style=official
 kotlin.js.generate.executable.default=false
-
+kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.distribution.type=prebuilt
 
 org.gradle.jvmargs=-Xmx2g
