--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Java 1.8
-        uses: actions/setup-java@v1
+      - name: Setup Java 8
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          distribution: zulu
+          java-version: 8
 
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
