--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
+baseVersion=1.5.0
+versionSuffix=
+
 kotlin.code.style=official
 kotlin.js.generate.executable.default=false
 kotlin.mpp.enableGranularSourceSetsMetadata=true
