--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 baseVersion=1.5.10
-versionSuffix=SNAPSHOT
+versionSuffix=
 
 kotlin.code.style=official
 kotlin.js.generate.executable.default=false
