--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
 
   properties:
     name: Export Properties
-    if: github.event_name != 'pull_request'
+    if: (github.event_name != 'pull_request') && (github.ref == 'refs/heads/main')
     needs: gradleValidation
     runs-on: ubuntu-latest
     outputs:
