--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,10 @@
 
 name: Build
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
 
 jobs:
 
@@ -61,8 +64,34 @@ jobs:
           java-version: 8
       - name: Run Unit Tests
         run: ./gradlew allTests --stacktrace
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          path: 'build/test-results/**/*.xml'
       - name: Run Detekt
+        if: always()
         run: ./gradlew detekt --stacktrace
+      - name: Generate Detekt Annotations
+        if: always()
+        uses: jwgmeligmeyling/checkstyle-github-action@master
+        with:
+          path: 'build/reports/detekt.xml'
+
+  reports:
+    name: Publish Reports
+    needs: checks
+    runs-on: ubuntu-latest
+    if: success() || failure()
+    steps:
+      - name: Download Test Results
+        uses: actions/download-artifact@v2
+        with:
+          path: artifacts
+      - name: Publish Test Report
+        uses: EnricoMi/publish-unit-test-result-action/composite@v1
+        with:
+          files: 'artifacts/**/*.xml'
 
   dokka:
     name: Generate Dokka Documentation
