--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,6 @@ kotlin.code.style=official
 kotlin.js.generate.executable.default=false
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.distribution.type=prebuilt
+kotlin.tests.individualTaskReports=true
 
 org.gradle.jvmargs=-Xmx2g
