--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-baseVersion=1.5.30
-versionSuffix=
+baseVersion=1.5.40
+versionSuffix=SNAPSHOT
 
 kotlin.code.style=official
 kotlin.js.generate.executable.default=false
