--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-baseVersion=1.5.40
-versionSuffix=SNAPSHOT
+baseVersion=1.6.0
+versionSuffix=
 
 kotlin.code.style=official
 kotlin.js.generate.executable.default=false
