--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-baseVersion=1.6.0
-versionSuffix=
+baseVersion=1.7.0
+versionSuffix=SNAPSHOT
 
 kotlin.code.style=official
 kotlin.js.generate.executable.default=false
