--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
 
   gradleValidation:
     name: Validate Gradle Wrapper
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Fetch Sources
         uses: actions/checkout@v3
@@ -22,7 +22,7 @@ jobs:
     name: Export Properties
     if: (github.event_name != 'pull_request') && (github.ref == 'refs/heads/main')
     needs: gradleValidation
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     outputs:
       version: ${{ steps.properties.outputs.version }}
       changelog: ${{ steps.properties.outputs.changelog }}
@@ -30,7 +30,7 @@ jobs:
       - name: Fetch Sources
         uses: actions/checkout@v3
       - name: Setup Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: zulu
           java-version: 8
@@ -53,12 +53,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-11]
+        os: [ubuntu-22.04, windows-2022, macos-12]
     steps:
       - name: Fetch Sources
         uses: actions/checkout@v3
       - name: Setup Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: zulu
           java-version: 8
@@ -66,7 +66,7 @@ jobs:
         run: ./gradlew allTests --stacktrace
       - name: Upload Test Results
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           path: 'build/test-results/**/*.xml'
       - name: Run Detekt
@@ -81,11 +81,11 @@ jobs:
   reports:
     name: Publish Reports
     needs: checks
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: success() || failure()
     steps:
       - name: Download Test Results
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           path: artifacts
       - name: Publish Test Report
@@ -96,12 +96,12 @@ jobs:
   dokka:
     name: Generate Dokka Documentation
     needs: gradleValidation
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Fetch Sources
         uses: actions/checkout@v3
       - name: Setup Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: zulu
           java-version: 8
@@ -114,12 +114,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-11]
+        os: [ubuntu-22.04, windows-2022, macos-12]
     steps:
       - name: Fetch Sources
         uses: actions/checkout@v3
       - name: Setup Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: zulu
           java-version: 8
@@ -130,7 +130,7 @@ jobs:
     name: Draft New Release
     if: (github.event_name != 'pull_request') && (github.ref == 'refs/heads/main')
     needs: properties
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Fetch Sources
         uses: actions/checkout@v3
@@ -160,12 +160,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-11]
+        os: [ubuntu-22.04, windows-2022, macos-12]
     steps:
       - name: Fetch Sources
         uses: actions/checkout@v3
       - name: Setup Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: zulu
           java-version: 8
