--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 baseVersion=1.7.0
-versionSuffix=SNAPSHOT
+versionSuffix=RC
 
 kotlin.code.style=official
 kotlin.js.generate.executable.default=false
