--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,7 @@ jobs:
   release:
     name: Publish To Maven Central
     needs: gradleValidation
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-22.04, windows-2022, macos-12]
+    runs-on: macos-13
     steps:
       - name: Fetch Sources
         uses: actions/checkout@v3
@@ -44,7 +41,7 @@ jobs:
           SIGNING_PASS: ${{ secrets.signingPassword }}
           SONATYPE_USERNAME: ${{ secrets.ossrhUsername }}
           SONATYPE_PASSWORD: ${{ secrets.ossrhPassword }}
-        run: .github/scripts/publish_artifacts ${{ matrix.os }}
+        run: .github/scripts/publish_artifacts
 
   changelog:
     name: Update Changelog
