Add support for Java Modules (JPMS)

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ versionSuffix=
 kotlin.code.style=official
 kotlin.js.generate.executable.default=false
 kotlin.native.distribution.type=prebuilt
+kotlin.native.ignoreDisabledTargets=true
 kotlin.tests.individualTaskReports=true
 
 org.gradle.jvmargs=-Xmx2g
