--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -166,15 +166,8 @@ jobs:
         with:
           distribution: zulu
           java-version: 11
-      - name: Decrypt Key Ring File
-        env:
-          SIGNING_KEY_FILE_PASSPHRASE: ${{ secrets.signingKeyFilePassphrase }}
-        run: .github/scripts/decrypt_secring
       - name: Publish Snapshot Locally
-        env:
-          SIGNING_KEY_ID: ${{ secrets.signingKeyId }}
-          SIGNING_PASS: ${{ secrets.signingPassword }}
-        run: .github/scripts/publish_artifacts SNAPSHOT
+        run: ./gradlew publish --stacktrace
 
   snapshot:
     name: Publish To OSSRH Snapshot Repository
